# django-project

./: .env  .gitignore  Pipfile  README.md  docker-compose.yml  pyproject.toml
EchoWolfProject/: Dockerfile  manage.py
EchoWolfProject/Authentication/: __init__.py  forms.py  messages.py  models.py  toastMessages.py  urls.py  views.py
EchoWolfProject/Authentication/migrations/: 0001_initial.py  0002_remove_user_first_name_remove_user_last_name.py
EchoWolfProject/EchoWolfProject/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
EchoWolfProject/FeedMessages/: apps.py
EchoWolfProject/Types/: main.py
EchoWolfProject/static/css/: base.css  feed.css  login.css  profile.css  toast-alert.css
EchoWolfProject/templates/: base.html  favicon.html  feed.html  login.html  message-item.html  profile.html  toast-alert.html
mongodb/: Dockerfile  init-db.js
mongodb/sample-data/: messages.json  scrap-tasks.json  user-externalcredentials.json  users.json
