[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Ronaldo Aguirre <ronaldo.aguirre@protonmail.com>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.3"
djongo = "^1.3.6"
pymongo = "3.12.1"
django = "4.0.10"
django-bootstrap-v5 = "^1.0.11"
pytz = "^2023.3"
python-dotenv = "^1.0.0"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"